# frontend-skillcert

./: .env.example  LICENSE  database.sqlite  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  secret-key.asc  tailwind.config.ts  test-user-answer.mjs  tsconfig.json
api/: .env.sample  Cargo.toml  README.md
api/migrations/: 20231010120000_create_users_table.sql
api/src/: config.rs  main.rs
api/src/models/: user.rs
prisma/: schema.prisma  seed.mjs  seed.ts
prisma/migrations/20250427120033_add_videolesson_model/: migration.sql
prisma/migrations/20250428162142_user/: migration.sql
prisma/migrations/20250429164525_init/: migration.sql
src/: app.module.ts  main.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/CoursesSection/: page.tsx
src/app/Explore/: page.tsx
src/app/FooterPage/: page.tsx
src/app/WelcomeSection/: page.tsx
src/app/api/: course-progress-handler.ts  route.ts
src/app/components/: AlbedoIcon.tsx  ConnectWalletButton.tsx  WelcomeSection.tsx  footer.tsx  learnMoreButton.tsx  nabvar.tsx  page.tsx  xBullIcon.tsx
src/components/: Button.tsx  ConnectWalletButton.tsx  CreateModule.tsx  RabetIcon.tsx  WelcomeSection.tsx  add-lesson-modal.tsx  add-module-modal.tsx  coursesSection.tsx  createLesson.tsx  nabvar.tsx  noBGButton.tsx  primaryButton.tsx
src/database/: connection.ts  course_progress.ts  schema.prisma
src/lib/: auth.ts  prisma.ts  serializeBigInt.ts
src/store/: walletStore.ts
src/types/: lesson.ts  module.ts  supportTicket.ts  videoLesson.ts
src/wallet/: walletHooks.ts  walletKit.ts
(+120 files in other folders)
